--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
         "dev": "vite",
         "dev-host": "vite --host",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "tauri": "tauri"
     },
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+        "@tauri-apps/cli": "^1.0.5",
         "svelte": "^3.49.0",
         "vite": "^2.9.9"
     },
