--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@rollup/plugin-replace": "^4.0.0",
+        "@tauri-apps/api": "^1.0.2",
         "rollup-plugin-workbox": "^6.2.0"
     }
 }
